[package]
name = "liquidcrystal_i2c-rs"
version = "0.2.0"
authors = ["Guanicoe <guanicoe@m.me>"]
edition = "2021"
description = "Rewrite of I2C driver for LM1602 LCD displays based on port of LiquidCrystal_I2C.h. With abstract hardward abstract layer. Tested on RasberryPI and ESP32"
homepage = "https://github.com/guanicoe/LiquidCrystal_I2C-rs"
keywords = ["lcd", "LM1602", "embedded", "I2C", "LiquidCrystal", "RasberryPI", "Esp32"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/guanicoe/LiquidCrystal_I2C-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
